tests/baselines/reference/templateStringsArrayTypeRedefinedInES6Mode.errors.txt
tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts(1,7): error TS2300: Duplicate identifier 'TemplateStringsArray'.
tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts(7,3): error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray<readonly string[]>'.
  Type '{}' is missing the following properties from type 'readonly string[]': length, concat, join, slice, and 15 more.


==== tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts (2 errors) ====
    class TemplateStringsArray {
          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'TemplateStringsArray'.
!!! related TS6203 /.ts/lib.es5.d.ts:604:6: 'TemplateStringsArray' was also declared here.
    }
    
    function f(x: TemplateStringsArray, y: number, z: number) {
    }
    
    f({}, 10, 10);
      ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray<readonly string[]>'.
!!! error TS2345:   Type '{}' is missing the following properties from type 'readonly string[]': length, concat, join, slice, and 15 more.
    
    f `abcdef${ 1234 }${ 5678 }ghijkl`;